fix: correct quote source text alignment

--- a/style.css
+++ b/style.css
@@ -146,3 +146,8 @@ img {
 .quote {
     padding: 5rem 20rem 5rem 20rem;
 }
+
+
+.quote-source {
+    text-align: right;
+}
